--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -48,7 +48,7 @@ jobs:
         if: steps.changes.outputs.stack == 'true'
         id: pip-cache
         run: |
-          echo "::set-output name=dir::$(pip cache dir)"
+        echo "dir=$(pip cache dir)" >> $GITHUB_STATE
 
       - name: pip cache
         uses: actions/cache@v3
