--- a/.github/workflows/pr-tests-enclave.yml
+++ b/.github/workflows/pr-tests-enclave.yml
@@ -54,7 +54,7 @@ jobs:
         id: pip-cache
         if: steps.changes.outputs.syft == 'true'
         run: |
-          echo "::set-output name=dir::$(pip cache dir)"
+          echo "dir=$(pip cache dir)" >> $GITHUB_STATE
 
       - name: pip cache
         uses: actions/cache@v3
