--- a/.github/workflows/pr-tests-linting.yml
+++ b/.github/workflows/pr-tests-linting.yml
@@ -34,9 +34,8 @@ jobs:
       - name: Get pip cache dir
         id: pip-cache
         run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
-      # TODO: change cache key from setup.cfg to something more general
+          echo "dir=$(pip cache dir)" >> $GITHUB_STATE
+        # TODO: change cache key from setup.cfg to something more general
       - name: pip cache
         uses: actions/cache@v3
         with:
