--- a/.github/workflows/pr-tests-stack.yml
+++ b/.github/workflows/pr-tests-stack.yml
@@ -66,7 +66,7 @@ jobs:
         if: steps.changes.outputs.stack == 'true'
         id: pip-cache
         run: |
-          echo "::set-output name=dir::$(pip cache dir)"
+          echo "dir=$(pip cache dir)" >> $GITHUB_STATE
 
       - name: pip cache
         uses: buildjet/cache@v3
@@ -175,15 +175,13 @@ jobs:
         id: job_name
         if: failure()
         run: |
-          echo "::set-output name=job_name::$(echo ${{ github.job }})"
-          echo "::set-output name=url::$(echo ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
-
+          echo "job_name=$(echo ${{ github.job }})" >> $GITHUB_STATE
+          echo "url=$(echo ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STATE
       - name: Get current date
         id: date
         if: failure()
         shell: bash
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_STATE
       - name: Upload logs to GitHub
         uses: actions/upload-artifact@master
         if: failure()
@@ -210,7 +208,7 @@ jobs:
         id: pull_request
         if: failure()
         run: |
-          echo "::set-output name=url::$(echo ${{ github.event.pull_request.html_url }})"
+          echo "url=$(echo ${{ github.event.pull_request.html_url }})" >> $GITHUB_STATE
 
       - name: Job Report Status
         # cant access secrets on forks
@@ -262,8 +260,7 @@ jobs:
         if: steps.changes.outputs.stack == 'true'
         id: pip-cache
         run: |
-          echo "::set-output name=dir::$(pip cache dir)"
-
+          echo "dir=$(pip cache dir)" >> %GITHUB_STATE
       - name: pip cache
         uses: buildjet/cache@v3
         if: steps.changes.outputs.stack == 'true'
