--- a/.github/workflows/cd-syft.yml
+++ b/.github/workflows/cd-syft.yml
@@ -105,7 +105,7 @@ jobs:
           fi
 
       - name: Set Grid package version
-        run: echo "GRID_VERSION=$(python packages/grid/VERSION)" >> $GITHUB_ENV
+        run: echo "GRID_VERSION=$(python packages/grid/VERSION)" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
