--- a/.github/workflows/pr-tests-hagrid.yml
+++ b/.github/workflows/pr-tests-hagrid.yml
@@ -57,7 +57,7 @@ jobs:
         id: pip-cache
         if: steps.changes.outputs.hagrid == 'true'
         run: |
-          echo "dir=$(pip cache dir)" >> $GITHUB_STATE
+          echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
       - name: pip cache
         uses: actions/cache@v3
