--- a/.github/workflows/pr-tests-stack-arm64.yml
+++ b/.github/workflows/pr-tests-stack-arm64.yml
@@ -46,7 +46,7 @@ jobs:
       # - name: Get pip cache dir
       #   id: pip-cache
       #   run: |
-      #     echo "dir=$(pip cache dir)" >> $GITHUB_STATE
+      #     echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
       # - name: pip cache
       #   uses: actions/cache@v3
