--- a/.github/workflows/pr-tests-stack.yml
+++ b/.github/workflows/pr-tests-stack.yml
@@ -66,7 +66,7 @@ jobs:
         if: steps.changes.outputs.stack == 'true'
         id: pip-cache
         run: |
-          echo "dir=$(pip cache dir)" >> $GITHUB_STATE
+          echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
       - name: pip cache
         uses: buildjet/cache@v3
@@ -175,13 +175,13 @@ jobs:
         id: job_name
         if: failure()
         run: |
-          echo "job_name=$(echo ${{ github.job }})" >> $GITHUB_STATE
-          echo "url=$(echo ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STATE
+          echo "job_name=$(echo ${{ github.job }})" >> $GITHUB_OUTPUT
+          echo "url=$(echo ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_OUTPUT
       - name: Get current date
         id: date
         if: failure()
         shell: bash
-        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_STATE
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - name: Upload logs to GitHub
         uses: actions/upload-artifact@master
         if: failure()
@@ -208,7 +208,7 @@ jobs:
         id: pull_request
         if: failure()
         run: |
-          echo "url=$(echo ${{ github.event.pull_request.html_url }})" >> $GITHUB_STATE
+          echo "url=$(echo ${{ github.event.pull_request.html_url }})" >> $GITHUB_OUTPUT
 
       - name: Job Report Status
         # cant access secrets on forks
@@ -260,7 +260,7 @@ jobs:
         if: steps.changes.outputs.stack == 'true'
         id: pip-cache
         run: |
-          echo "dir=$(pip cache dir)" >> %GITHUB_STATE
+          echo "dir=$(pip cache dir)" >> %GITHUB_OUTPUT
       - name: pip cache
         uses: buildjet/cache@v3
         if: steps.changes.outputs.stack == 'true'
