added shell to account for windows defaulting to PowerShell Core

--- a/.github/workflows/cd-syft.yml
+++ b/.github/workflows/cd-syft.yml
@@ -105,6 +105,7 @@ jobs:
           fi
 
       - name: Set Grid package version
+        shell: bash
         run: echo "GRID_VERSION=$(python packages/grid/VERSION)" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
