--- a/.github/workflows/pr-tests-enclave.yml
+++ b/.github/workflows/pr-tests-enclave.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Get pip cache dir
         id: pip-cache
         if: steps.changes.outputs.syft == 'true'
+        shell: bash
         run: |
           echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
