--- a/.github/workflows/pr-tests-frontend.yml
+++ b/.github/workflows/pr-tests-frontend.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Get pip cache dir
         id: pip-cache
         if: steps.changes.outputs.frontend == 'true'
+        shell: bash
         run: |
           echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
@@ -121,6 +122,7 @@ jobs:
       - name: Get pip cache dir
         id: pip-cache
         if: steps.changes.outputs.stack == 'true'
+        shell: bash
         run: |
           echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
