--- a/.github/workflows/pr-tests-hagrid.yml
+++ b/.github/workflows/pr-tests-hagrid.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Get pip cache dir
         id: pip-cache
         if: steps.changes.outputs.hagrid == 'true'
+        shell: bash
         run: |
           echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
