--- a/.github/workflows/pr-tests-linting.yml
+++ b/.github/workflows/pr-tests-linting.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Get pip cache dir
         id: pip-cache
+        shell: bash
         run: |
           echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
         # TODO: change cache key from setup.cfg to something more general
