--- a/.github/workflows/pr-tests-stack-arm64.yml
+++ b/.github/workflows/pr-tests-stack-arm64.yml
@@ -45,6 +45,7 @@ jobs:
 
       # - name: Get pip cache dir
       #   id: pip-cache
+      #   shell: bash
       #   run: |
       #     echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
 
